--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="lib" path="C:/Users/Samsung/eclipse-workspace/libs/selenium/libs/okio-1.14.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Samsung/eclipse-workspace/libs/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Samsung/eclipse-workspace/libs/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Samsung/eclipse-workspace/libs/commons-io-2.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
